--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A comprehensive web-based uniform inventory management system with barcode scanning for delivery tracking",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "create-admin": "node createAdmin.js"
   },
@@ -35,7 +35,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.5.0",
     "multer": "^2.0.0-rc.4",
-    "puppeteer": "^21.5.0",
+    "puppeteer": "^24.23.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
